fix: logs error overflow (#3503)

--- a/src/modules/70-pipeline/components/LogsContent/LogsContent.module.scss
+++ b/src/modules/70-pipeline/components/LogsContent/LogsContent.module.scss
@@ -29,6 +29,13 @@
       align-items: center;
       column-gap: var(--spacing-xsmall);
       --intent-color: var(--red-500);
+
+      :global {
+        .bp3-popover-target,
+        .bp3-popover-wrapper {
+          display: block;
+        }
+      }
     }
   }
 
